<resources>
    <string name="app_name">MovieApp</string>
    <string name="registerBtnTxt">Register</string>
    <string name="loginBtnTxt">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPass">Repeat Password</string>
    <string name="email">Email</string>

    <string name="usernameEmpty">Please fill in the username field!</string>
    <string name="passwordEmpty">Please fill in the password field!</string>
    <string name="usernameUsed">Username already used! Please choose another one!</string>
    <string name="emailEmpty">Please fill in the email field!</string>
    <string name="emailUsed">Email address already used!</string>
    <string name="passShort">Password should be at least 6 characters long!</string>
    <string name="passNoMatch">Passwords do not match! Please check that you wrote them correct!</string>
    <string name="registerSuccessful">Registered successfully!</string>
    <string name="loginSuccess">Successfully logged in!</string>
    <string name="loginFail">Email or password incorrect! Please try again!</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="inCinemas">In Cinemas</string>
    <string name="favs">Favorites</string>

    <string name="changePic">Change profile picture</string>
    <string name="changePass">Change password</string>
    <string name="logout">Log out</string>
    <string name="changePicSuccess">Successfully changed the profile picture!</string>
    <string name="changePicFail">Failed to change profile picture!</string>
    <string name="changePassSuccess">Successfully changed the password!</string>
    <string name="changePassFail">Failed to change password!</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>

    <string name="description">Description</string>
    <string name="images">Images</string>
    <string name="similar">Related movies</string>
    <string name="video">Video</string>

    <string name="favSaved">Saved to favorites!</string>
    <string name="favRemoved">Removed from favorites!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
