<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/changePass"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/et_pass_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/oldPass"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/et_pass_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPass"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        />

</LinearLayout>