<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainSectionActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/dialog_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingHorizontal="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/tv_description_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Szoveg"
            android:textColor="#000"
            android:textSize="16sp"
            android:paddingBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/images"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimaryDark"/>


        <HorizontalScrollView
            android:id="@+id/detail_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/imageGallery"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:orientation="horizontal"/>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <WebView
            android:id="@+id/video_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/similar"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="10dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_related"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>
        

    </LinearLayout>

</androidx.core.widget.NestedScrollView>